test/link/script-unterminated-string.out
error: script-unterminated-string.link(2): Unterminated string
Linking failed with 1 error
