test/link/script-unterminated-string.link
rom0
	"ROM0
